--- a/index.css
+++ b/index.css
@@ -1,15 +1,66 @@
 body {
-	font-family: Georgia, serif;
+  /*font-family: 'Lato', sans-serif;*/
+  /*background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/background.jpg');
+  background-position: center top;
+  background-size: cover;
+  margin: 0;*/
+}
+
+html, body {/*
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-weight: 300;
+  line-height: 1.5;*/
+}
+
+body {
+	background-color: #5861DA;
 	height: 100%;
 	margin: 0;
 	text-align: center;
-	width: 100%;
 }
 
-h1 {
-	color: DarkOliveGreen;
-	font-family: Palatino, ' Palatino Linotype',serif;
-	font-size: 32px;
+.logo {
+	/*background-color: #5861DA;*/
+	margin-top: 20px;
+}
+.encabezado {
+}
+
+.encabezado h1 {	
+	color: black;
+	font-family: 'Open Sans',sans-serif;
+	font-size: 40px;
+	font-weight: 300;
+	line-height: 0.5;
+}
+
+.encabezado a {
+  color: #00FFAA;
+  text-decoration: none;
+  text-shadow: 0 2px #000000;
+}
+
+.encabezado a:visited {
+	color: chocolate;
+}
+
+.encabezado a:hover {
+	color:red;
+}
+
+.encabezado a:active {
+	color: yellow;
+}
+
+.encabezado p {
+  border: 1px solid #ffffff;
+  margin: 50px;
+  text-align: center;
+  padding: 30px;
+  color: #ffffff;
+  font-size: 2em;	
 }
 
 h2 {
@@ -17,22 +68,78 @@ h2 {
 	font-size: 56px; 
 }
 
+/*cuadros que se mueven*/
+
+#mainwrapper {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	font-family: 'Open Sans', sans-serif;
+	margin: 20px;
+}
+
+#mainwrapper .box {
+    overflow: hidden;
+    -webkit-box-shadow: 1px 1px 1px 1px #ccc;
+    -moz-box-shadow: 1px 1px 1px 1px #ccc;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px #ccc;
+    border: 5px solid #fff;
+    cursor: pointer;
+    height: 210px;
+    width: 320px;
+    float: left;
+    margin: 20px;
+    position: relative;
+}
+ 
+#mainwrapper .box img {
+    position: absolute;
+    left: 0;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+}
+
+#mainwrapper .box .caption {
+    background-color: rgba(0,0,0,0.8);
+    position: absolute;
+    color: #fff;
+    z-index: 100;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    left: 0;
+}
+
+#mainwrapper .box .fade-caption, #mainwrapper .box .scale-caption {
+    opacity: 0;
+    height: 200px;
+    width: 290px;
+    text-align: center;
+    font-size: 20pt;
+    padding: 55px 15px;
+}
+
+#mainwrapper .box:hover .fade-caption {
+    opacity: 1;
+}
+/*Cuadros que se mueven*/
 
 .hero {
 	background-image: url('http://www.fondosypantallas.com/wp-content/uploads/2008/12/ph-116401.jpg');
 	background-position: center top;
 	background-size: cover;
-	padding: 250px 0;
-	margin: 30px;
+	padding: 250px;
+	margin-right:30px;
+	margin-left:30px;
 	text-shadow: 0 2px #000000;
 	font-family: 'Trebuchet MS', 'Helvetica', sans-serif;
-	color: rgb(46,105,163);
-}
-
-
-p {
-	color: #ffffff;
-	font-size: 2em;
+	color: rgb(46,150,163);
+	border: 5px solid #FFF;
 }
 
 .hero a {
@@ -41,9 +148,58 @@ p {
 	text-decoration: none;
 }
 
+
+/* FOOTER NAVIGATION */
+nav {
+  background-color: #374550;
+}
+
+nav li {
+	margin: 0px;
+	display: inline;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12pt;
+	padding: 0 30px;
+  /*espacio entre textos*/
+}
+
+nav ul {
+  display: inline;
+}
+
+.contact-btn {
+	float: right;
+}
+
+.contact-btn a {
+  cursor:pointer;
+  position: relative;
+  margin-right: 30px;
+  padding: 8px 18px;
+/*padding es para los bordes (alto)x(ancho)*/
+  border: 1px solid #ffffff;
+}
+
+.contact-btn a:active {
+  position: relative;
+  top: 2px;
+  bottom: 2px;
+}
+
+nav a {
+  height: 60px;
+  line-height: 60px;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+
+/* Final de barra de navegacion*/
 #footer {
-	color: DarkSlateGray;
-	font-size: 0.75rem;
+	padding: 10px;
+	background-color: #374550;
+	color: #ffffff;
+	font-size: 1.5rem;
 }
 
 
